page.css
/* ... */
remiscan-logo::part(link) {
  --text-color: var(--link-color);
  --text-gradient: var(--logo-gradient);
  border-radius: calc(.33 * var(--border-radius));
}

remiscan-logo::part(link):hover,
remiscan-logo::part(link):focus {
  background-color: var(--button-hover-bg-color);
}

remiscan-logo::part(link):active {
  background-color: var(--button-active-bg-color);
}





/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! SECTION DÉMO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

/*
 * Zone de saisie manuelle
 */

#saisie {
  grid-template-columns: auto 1fr;
}

label[for=entree] {
  grid-row: 1;
  grid-column: 1;
  width: fit-content;
}

color-picker::part(select),
color-picker::part(input-number),
input[type="text"] {
  grid-row: auto;
  grid-column: 1 / 3;
  height: 100%;
  min-height: var(--tap-safe-size);
  border: none;
  box-sizing: border-box;
  padding: .4em .6em;
  font-family: 'Fira Code';
  color: var(--text-color);
  background-color: var(--input-bg-color);
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px var(--body-color);
  outline-offset: 2px;
}

input[type="text"] {
  grid-row: 2;
  grid-column: 1 / 3;
  width: 100%;
  height: 100%;
  min-height: calc(2.4rem + 8px);
  padding-right: calc(.6em + 2.5rem);
}

color-picker::part(select):hover,
color-picker::part(input-number):hover,
input[type="text"]:hover {
  box-shadow: 0 0 0 2px var(--h3-color);
}

color-picker::part(select):active,
color-picker::part(select):focus,
color-picker::part(input-number):active,
color-picker::part(input-number):focus,
input[type="text"]:active,
input[type="text"]:focus {
  outline: none;
  background-color: var(--input-active-bg-color);
  box-shadow: 0 0 0 2px var(--h3-color);
}

::placeholder {
  color: var(--input-placeholder-color);
}

color-picker {
  grid-row: 2;
  grid-column: 2;
  justify-self: end;
  right: 0;
  --size: 2.4rem;
  --range-height: 15rem;
  --range-border-width: 2px;
  --range-border-radius: var(--border-radius);
}

@media (max-width: 672px) {
  color-picker {
    grid-column: 1;
  }
}

color-picker::part(selector) {
  margin: auto;
  z-index: unset;
  transform: unset;
  transition: unset;
  max-width: 100vw;
  overflow: auto;
  min-width: unset;
  right: 0;
}

color-picker::part(property-name) {
  font-size: .9rem;
  font-weight: 600;
  color: var(--h3-color);
}

color-picker::part(select),
color-picker::part(input-number) {
  font-size: .9rem;
  min-width: 5ch;
  color: var(--text-color);
}

color-picker::part(button) {
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
  padding: 4px;
  background-color: var(--button-bg-color);
  border: none;
  box-shadow: 0 0 0 1px var(--button-border-color);
  border-radius: var(--border-radius);
  white-space: nowrap;
  text-decoration: none;
  overflow: hidden;
}

color-picker::part(button):is(:hover, :focus) {
  background-color: var(--button-hover-bg-color);
  --button-border-color: var(--button-hover-border-color);
}

color-picker::part(button):is(:active) {
  background-color: var(--button-active-bg-color);
  --button-border-color: var(--button-hover-border-color);
}

color-picker::part(color-preview) {
  border-radius: calc(.83 * var(--border-radius));
}



/*
 * Boutons d'exemples
 */

.exemples-saisie {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  gap: calc(.5 * var(--section-padding));
  align-items: flex-end;
  overflow-x: auto;
  overflow-y: visible;
  scrollbar-width: thin;
}

.exemples-saisie>span {
  opacity: .7;
  font-size: .9rem;
  padding: .2em 0;
  border: 1px solid transparent;
  white-space: nowrap;
}

.exemples-valeurs {
  grid-row: 1;
  grid-column: 2;
}

.exemples-valeurs,
.exemples-fonctions {
  padding: 2px 2px 2px 0; /* pour éviter de couper le bord et l'outline de focus */
}

.instructions-exemples-fonctions,
.exemples-fonctions {
  grid-column: 1 / 3;
  margin: 0;
}

#saisie:not([data-details]) :is(.instructions-exemples-fonctions, .exemples-fonctions) {
  display: none;
}

.instructions-exemples-fonctions {
  font-size: .9em;
}

.exemple {
  font-family: 'Fira Code';
  font-size: .8rem;
  font-weight: normal;
  color: inherit;
  padding: .4em .6em;
  border-radius: calc(.5 * var(--border-radius));
}

@media (pointer: coarse) {
  .exemple {
    padding-block: .6em;
    min-width: 44px;
  }
}

.exemple kbd {
  font-family: inherit;
}

[data-action="more-examples"] {
  padding-inline: 1.5ch;
}

[data-action="more-examples"]::before {
  content: '+';
}

#saisie[data-details] [data-action="more-examples"]::before {
  content: '-';
}



/*
 * Sélecteurs de couleurs
 */

#resultats {
  --preview-border-width: 4px;
}



/*
 * Résultats
 */

#resultats {
  grid-template-columns: auto 1fr;
}

#resultats [role="tablist"] {
  grid-column: 2;
  margin: auto;
  margin-left: 0;
  margin-block: -3px;
}

#resultats h3 {
  grid-column: 1;
}

.donnees {
  grid-column: 1 / -1;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;
  flex-wrap: wrap;
  gap: calc(.5 * var(--section-padding));
}

@media (max-width: 672px) {
  .donnees.liste-couleurs {
    flex-direction: column;
    align-items: start;
  }
}

.donnees .format,
color-swatch {
  background-color: var(--frame-color);
  column-gap: calc(2 * var(--preview-border-width));
  padding: var(--preview-border-width);
  border-radius: var(--border-radius);
  --color-preview-width: 2em;
  --warning-color: var(--error-color);
}

color-swatch > .color-swatch-preview {
  border-radius: calc(.66 * var(--border-radius));
  box-shadow: inset 0 0 0 2px currentColor;
}

color-swatch > button {
  padding: var(--preview-border-width);
  border: none;
  border-radius: calc(.66 * var(--border-radius));
}

color-swatch > button:not(:hover, :focus, :active) {
  background: none;
}

.format {
  align-self: center;
  max-width: calc(100% - .6rem);
}
/* ... */

